@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 20,
+  "count": 19,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2024-09-09T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-09-14T00:00:00Z",
       "count": 6,
